# fastapi_di

./: .pre-commit-config.yaml  README.md  dev.py  precommit_test.py  pyproject.toml
fastapi_di/: __init__.py  concurrency.py  injector.py  manager.py  protocols.py  spec.py  task.py  utils.py
tests/: test_injector.py  test_spec.py
