[tool.poetry]
name = "fastapi_di"
version = "0.0.1"
description = "Extracted the dependency injection process from fastapi."
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sasano8/fastapi_di"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
pydantic = "^1.8.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"
asy = "^0.0.7"
pre-commit = "^2.12.0"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
